...
                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="44" id="V9T-At-vsA"/>
                                </constraints>
                                <items>
                                    <navigationItem title="Title" id="xkv-tM-oXA">
                                        <barButtonItem key="leftBarButtonItem" title="Back" id="VKw-1u-l1G">
                                            <connections>
                                                <action selector="dismissView:" destination="2iT-N7-9R4" id="Q62-4Y-Wfs"/>
                                            </connections>
                                        </barButtonItem>
                                        <barButtonItem key="rightBarButtonItem" title="Share" id="4Z6-nJ-dbh"/>
                                    </navigationItem>
...
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="KXV-3B-JzW">
                                        <rect key="frame" x="0.0" y="0.0" width="107" height="48"/>
                                        <color key="tintColor" red="0.94817623771396109" green="0.98287435466976003" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <state key="normal">
                                            <attributedString key="attributedTitle">
                                                <fragment content="Register">
                                                    <attributes>
                                                        <font key="NSFont" size="30" name=".AppleSystemUIFont"/>
                                                    </attributes>
                                                </fragment>
                                            </attributedString>
                                        </state>
...
                                        <constraints>
                                            <constraint firstAttribute="width" constant="104" id="5jz-hS-xSr"/>
                                            <constraint firstAttribute="height" constant="38" id="L1c-eV-3hI"/>
                                        </constraints>
                                        <state key="normal">
                                            <attributedString key="attributedTitle">
                                                <fragment content="sign up">
                                                    <attributes>
                                                        <color key="NSColor" red="0.0098635166083346753" green="0.05593670685279184" blue="0.011203499024105537" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                        <font key="NSFont" size="18" name="HelveticaNeue-Bold"/>
                                                    </attributes>
                                                </fragment>
                                            </attributedString>
...
                                        <connections>
                                            <action selector="registerBtnClicked:" destination="Cgb-tw-0Qh" eventType="touchUpInside" id="JLk-HA-VBb"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2nB-Gv-aba">
                                        <rect key="frame" x="94" y="0.0" width="187" height="30"/>
                                        <state key="normal" title="Already an user? Click here">
                                            <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
                                        <connections>
                                            <action selector="alreadyAnUser:" destination="Cgb-tw-0Qh" eventType="touchUpInside" id="xz4-vQ-Qgw"/>
                                        </connections>
                                    </button>
...
