...
    
    @IBAction func registerBtnClicked(_ sender: Any) {
        
        if isInputValid(inputEmail: emailField.text!, inputPasswd: passwordField.text!) && isPasswordSame(passwd: passwordField.text!, confirmPasswd: confirmPasswdField.text!){
            firebaseSignup(inputEmail: emailField.text!, inputPasswd: passwordField.text!)
        }else{
            alertMessage(title: "Input Error", message: "Plase check your input. Email and password shouldn't be null. Password and confirm Password should be the same")
            //later could be improved to be label warning below the input field
        }
        
    }
    
    
...
            return false
        }
    }
    
    func alertMessage(title:String, message:String) -> Void {
        let alert = UIAlertController(title: title, message: message, preferredStyle: UIAlertControllerStyle.alert)
        alert.addAction(UIAlertAction(title: "OK", style: UIAlertActionStyle.cancel, handler: nil))
        self.present(alert, animated: true, completion: nil)
    }
    
    
    @IBAction func alreadyAnUser(_ sender: Any) {
        performSegue(withIdentifier: "registerToLogin", sender: nil)
...
