...
        }
        
        if tableView == categoryTableView {
            itemTableView.backgroundView?.isHidden = true
            let cell = tableView.cellForRow(at: indexPath) as! CategoryTableViewCell
            switch cell.categoryLabel.text {
            case "Diary":
                itemDataSource = SampleDataSource(wholeList: itemList, selectedCategory: "Diary")
                itemTableView.dataSource = itemDataSource
                itemTableView.reloadData()
                break
            case "Beverage":
                itemDataSource = SampleDataSource(wholeList: itemList, selectedCategory: "Beverage")
...
